--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+ <h1>Fadi's Portfolio</h1>
+ <h2>im a web developer</h2>
+ <hr>
+ <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
+ <img src="./assets/images/movie-ranking.png" height="200">
+ <a href="./public/movie-ranking.html"><h2>Birthday Invite project</h2></a>
+ <img src="./assets/images/birthday-invite.png" height="200">
+ <hr>
+ <a href="./public/about.html">About me</a>
+ <a href="./public/contact.html">Contact Me</a>
+</body>
+</html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
